A collection of smaller fixes: - translation run in debug mode only in DEV - confirmation dialog resolves with boolean, instead of rejecting on cancel (solves the warnings with unhandled promise rejections) - fixed modals staying open after navigation (possible e.g. when navigating to the login page) - force refresh user status if any query reports unauthorised. - improved the Select component: disable when fieldset/form is disabled (this should work out of the box in zag but doesn't), add a small spinner when loading options, some fixes in the disabled state - fixed some styles

--- a/resources/js/components/ui/form/Select.module.scss
+++ b/resources/js/components/ui/form/Select.module.scss
@@ -22,14 +22,14 @@
       @apply absolute top-0.5 bottom-0.5 right-0.5 flex items-center gap-0.5;
       background-color: var(--bg-color);
 
-      > button {
+      button {
         width: 16px;
         max-height: 20px;
       }
     }
 
-    &[data-disabled] > button > svg {
-      @apply text-opacity-60;
+    &[data-disabled] > .buttons button svg {
+      @apply text-opacity-30;
     }
 
     &[data-invalid] {
@@ -66,7 +66,7 @@
     @apply flex flex-wrap items-center gap-0.5;
 
     > .value {
-      @apply px-1 border border-gray-400 rounded flex gap-0.5;
+      @apply px-1 border border-input-border rounded flex gap-0.5;
 
       > .label {
         @apply wrapTextAnywhere;
@@ -74,6 +74,10 @@
       > .delete {
         @apply px-0.5;
       }
+    }
+
+    &[data-disabled] > .value > button svg {
+      @apply text-opacity-30;
     }
 
     > [data-part="input"] {
